--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,37 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.timer {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+
+  margin: 15px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.field:nth-of-type(2) > .value::after,
+.field:nth-of-type(3) > .value::after {
+  content: ':';
+}
+
+.field > .value {
+  display: block;
+  font-size: 4rem;
+  color: #f41b4b;
+}
+
+.timer div:first-of-type {
+  margin-right: 30px;
+}
+
+.label {
+  text-transform: uppercase;
+}
